# Ledger-Trading-Journal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Ledger  LedgerBridge.mq5  MT5_LOCAL_FEED_SETUP.md  Makefile  README.md  TradingViewIndicator.pine  WINDOWS_PRICE_ALERT_PLAN.md  WINDOWS_SETUP.md  cmake_install.cmake  compile_commands.json  ledger.db  ledger_signal.json  main.cpp  release.sh
.github/workflows/: release.yml
Ledger_autogen/: mocs_compilation.cpp
Ledger_autogen/UYX5XTB5RZ/: moc_addtradedialog.cpp  moc_addtradedialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
bridge/: MT5PriceExporter.mq5  SETUP.md  mt5_sender.py  tick_replay.py
cloud/: INGEST_PROTOCOL.md  PI_MIGRATION.md  TWELVE_DATA_BUDGET.md  deploy_pi_update.sh  install_pi.sh  ledger-alerts.service  server.py
core/: alertsync.h  constants.h  database.cpp  database.h  instrumentformat.h  lotcalculator.h  pricealert.h  pricefetcher.cpp  pricefetcher.h  signalwriter.h  stats.cpp  stats.h  theme.h  trade.h  updater.cpp  updater.h
ui/: addtradedialog.cpp  addtradedialog.h  alertswidget.cpp  alertswidget.h  checklistwidget.cpp  checklistwidget.h  mainwindow.cpp  mainwindow.h
